--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/main_graph"/>
+        app:navGraph="@navigation/main_graph"
+        android:padding="16dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv"
@@ -31,6 +32,7 @@
         app:itemActiveIndicatorStyle="@null"
         android:background="@color/primaryLight"
         app:itemIconTint="@color/bottom_nav_selected"
-        app:itemTextColor="@color/bottom_nav_selected"/>
+        app:itemTextColor="@color/bottom_nav_selected"
+        app:itemRippleColor="@color/lightGold"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
