--- a/app/src/main/res/layout/fragment_turn.xml
+++ b/app/src/main/res/layout/fragment_turn.xml
@@ -1,15 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.turn.TurnFragment"
     android:background="@color/primary">
+
+
     <TextView
+        android:id="@+id/tvServicesTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/turns"
+        android:text="Services"
         android:textSize="32sp"
-        android:textColor="@color/secondary"
+        android:textStyle="bold"
+        android:textColor="#ffcf40"
+        app:layout_constraintBottom_toTopOf="@id/rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="32dp"
         android:layout_gravity="center"/>
-</FrameLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvServicesTitle"
+        android:padding="16dp"
+        android:layout_gravity="center"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
